Adjusted POM.xml so our project is cross-plattform